<resources>
    <string name="app_name">LotteOnlineGym</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_main"></string>
    <string name="title_activity_input">Input</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="user_name">이름</string>
    <string name="user_age">나이</string>
    <string name="user_height">키</string>
    <string name="user_gender">성별</string>
    <string name="user_weight">몸무게</string>

    <string name="ai_suggestion">어깨가 좁으시네요. 어깨를 넓히기 위해선 풀업 운동이 최고랍니다. 오늘 풀업 100개에 도전해보세요!</string>

    <string name="submit">확인</string>

    <string-array name="menus_array">
        <item>홈</item>
        <item>식단</item>
        <item>운동</item>
        <item>상담</item>
        <item>채팅</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string name="navigationdraweractivity_title">Navigation Drawer Example</string>
    <string name="navigationdraweractivity_description">
        This example illustrates a common usage of the DrawerLayout widget in the Android support
        library.
    </string>


    <string name="intro_message">
        <![CDATA[


             Lotte Online AI Gym


        ]]>
    </string>

    <string name="title_section1">아침</string>
    <string name="title_section2">점심</string>
    <string name="title_section3">저녁</string>

    <string-array name="food_image_array">
        <item>R.drawable.jaeyook</item>
        <item>R.drawable.dyenjang</item>
        <item>R.drawable.ddokgalbi</item>
        <item>R.drawable.momil</item>
    </string-array>

    <string-array name="food_title_array">
        <item>제육볶음</item>
        <item>된장찌개</item>
        <item>떡갈비</item>
        <item>냉모밀</item>
    </string-array>

    <string-array name="food_description_array">
        <item>가격이 저렴하면서도 고기 맛을 즐기고 포만감을 느낄 수 있어 직장 남성들에게 인기 있는 메뉴다. 제육볶음은 돼지고기 목살을 도톰하게 저며 생강즙을 충분히 넣은 고추장 양념에 재웠다가 달달 볶아낸 대표적인 고추장 양념 요리다.</item>
        <item>된장찌개는 주식인 밥에 부족한 여러 영양소를 동시에 섭취할 수 있게 해준다. 매일 먹어도 결코 질리지 않는 음식으로 우리나라 사람들은 된장찌개를 첫손가락에 꼽는다. </item>
        <item>떡갈비는 궁중에서 임금님이 즐기던 고급음식이다. 쇠고기를 다져 만든 모양이 떡을 닮아 붙은 이름이다. 요즘은 갈비 고유의 맛과 간편한 조리 방법으로 아이들의 간식과 도시락 반찬으로 많이 쓰인다.</item>
        <item>메밀은 성질이 서늘하여 찬 음식에 속한다. 메밀과 같이 서늘한 성질을 가진 음식은 체내에서 열을 내려주고 염증을 가라앉히며 배변을 용이하게 해주는 역할을 한다.</item>
    </string-array>

</resources>
