<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="@dimen/input_text_size"/>

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_edittext_size"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview_user_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_gender"
            android:textSize="@dimen/input_text_size"/>

        <EditText
            android:id="@+id/edittext_user_gender"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_edittext_size"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview_user_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_age"
            android:textSize="@dimen/input_text_size"/>

        <EditText
            android:id="@+id/edittext_user_age"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_edittext_size"/>

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview_user_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_weight"
            android:textSize="@dimen/input_text_size"/>

        <EditText
            android:id="@+id/edittext_user_weight"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_edittext_size"/>

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview_user_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_height"
            android:textSize="@dimen/input_text_size"/>

        <EditText
            android:id="@+id/edittext_user_height"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_edittext_size"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/submit"/>


</LinearLayout>